--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -7,3 +7,17 @@
   justify-content: center;
   align-items: center;
 }
+
+.ham-popup-content {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .ham-popup-content {
+    display: none;
+  }
+}
