--- a/src/components/SidebarContainer/index.css
+++ b/src/components/SidebarContainer/index.css
@@ -1,7 +1,8 @@
-.link-style-sidebar {
-  text-decoration: none;
-}
-
-.link-active-style {
-  background-color: red;
+.nav-link-style {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 5px 5px 5px 15px;
 }
